Major changes for version 2

--- a/example/index.html
+++ b/example/index.html
@@ -21,15 +21,15 @@
 <body class="tabular">
     <!-- HEADER -->
     <nav class="fit" html-src="menu.html"></nav>
+    <!-- PAGE -->
     <div class="fill"> 
-        <div class="page" html-src="text.html"></div>
+        <div class="page" html-src="text.html" html-main></div>
     </div>
-
     <!-- FOOTER -->
     <div class="fit center">
         <div id="footer" class="hbox"> 
         Copyright © 2019 Benno Falkner <br />
-        Contact | Impressum | GitHub
+        <a href="mailto:benno.falkner@gmail.com">Contact</a> | <a href="#impress">Impressum</a> | <a href="https://github.com/bennof/tabularrasa">GitHub</a>
         </div>
     </div>
     <!-- SCRIPT LOADER -->
