--- a/example/menu.html
+++ b/example/menu.html
@@ -1,15 +1,15 @@
 <input type="checkbox" id="navmenu">
 <ul class="page">
-        <li class="logo"><a href="#null">Logo</a></li>
+        <li class="logo"><a href="#text"><img src="img/logo.svg"></a></li>
         <li class="has-children">
-            <a href="#null">Linke</a>
+            <a href="#scss">SCSS</a>
             <ul>
-                <li><a href="#null">Linke</a></li>
-                <li><a href="#null">Linke</a></li>
-                <li><a href="#null">Linke</a></li>
+                <li><a href="#typo2">typo2</a></li>
+                <li><a href="#menu2">menu2</a></li>
+                <li><a href="#forms2">forms2</a></li>
             </ul>
         </li>
-        <li><a href="#null" data-count="5">Linke</a></li>
+        <li><a href="#legacy" data-count="6">Legacy</a></li>
         <!-- right -->    
         <li class="right show-menu">
             <label for="navmenu">
@@ -39,7 +39,7 @@
                 </div>
             </div>
         </li>
-        <li class="right"><a href="#null">Rechts</a></li>
+        <li class="right"><a href="#examples">Examples</a></li>
         <li class="hide-menu"><label class="bold" for="navmenu">X</label></li>
         
     </ul>
