--- a/example/text.html
+++ b/example/text.html
@@ -21,23 +21,32 @@
 </div>
 
 <h2>Quotes</h2>
+
+<h3>Simplicity</h3>
+<blockquote>
+  Simplicity is prerequisite for reliability.
+  <span class="ref">Edsger W. Dijkstra</span>
+</blockquote>
+
+<h3>Simplicity 2</h3>
+<blockquote>
+  The unavoidable price of reliability is simplicity.
+  <span class="ref">C.A.R. Hoare</span>
+</blockquote>
+
+<h3>Optimization</h3>
+<blockquote>
+  You’re bound to be unhappy if you optimize everything.
+  <span class="ref">Donald Knuth</span>
+</blockquote>
+
+<h3>Syntax highlighting</h3>
 <blockquote>
     No. The creator of main users of Acme find syntax highlighting unhelpful and distracting.
   <span class="ref">Acme FAQ</span>
 </blockquote>
 
-<blockquote>
-  Simplicity is prerequisite for reliability.
-  <span class="ref">Edsger W. Dijkstra</span>
-</blockquote>
-<blockquote>
-  The unavoidable price of reliability is simplicity.
-  <span class="ref">C.A.R. Hoare</span>
-</blockquote>
-<blockquote>
-  You’re bound to be unhappy if you optimize everything.
-  <span class="ref">Donald Knuth</span>
-</blockquote>
+<h3>System ... </h3>
 <blockquote>
   A Professor of Computer Science gave a paper on how he uses Linux to teach his undergraduates about operating systems. Someone in the audience asked why use Linux rather than Plan 9?' and the professor answered:Plan 9 looks like it was written by experts; Linux looks like something my students could aspire to write'.
   <span class="ref">found on cat-v.org</span>
